--- a/index.html
+++ b/index.html
@@ -21,18 +21,18 @@
         <div class="row">
             <div class="col-6">
                 <div class="mb-3 mt-5">
-                    <label for="txt-student-name" class="form-label">Student name</label>
+                    <label for="txt-student-name" id="font" class="form-label">Student name</label>
                     <input type="email" class="form-control" id="txt-student-name" placeholder="Student name">
                 </div>
 
                 <div class="mb-3">
-                    <label for="txt-student-address" class="form-label">Student address</label>
+                    <label for="txt-student-address" id="font"  class="form-label">Student address</label>
                     <input type="email" class="form-control" id="txt-student-address"
                         placeholder="Student address">
                 </div>
 
                 <div class="mb-3">
-                    <label for="txt-student-age" class="form-label">Student age</label>
+                    <label for="txt-student-age" id="font"  class="form-label">Student age</label>
                     <input type="email" class="form-control" id="txt-student-age" placeholder="Student age">
                 </div>
             </div>
